js/src/tests/test262/built-ins/Error/prototype/stack/setter-proxy-trap-rejects.js






































var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;


var pA = new Proxy({}, {
  defineProperty: function () {
    return false;
  },
});
assert.throws(TypeError, function () {
  set.call(pA, 'v');
}, 'defineProperty returns false');


var pB = new Proxy({ stack: 'old' }, {
  set: function () {
    return false;
  },
});
assert.throws(TypeError, function () {
  set.call(pB, 'v');
}, 'set trap returns false');

reportCompare(0, 0);
